<resources>
    <string name="app_name">Gagambrawl</string>
    <string name="get_started_text">GET STARTED</string>
    <string name="email_txt">Email</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="don_t_have_an_account_yet_sign_in">Don’t have an account yet? Sign up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_and_account_sign_in">Already have and account? Sign in</string>
    <string name="login">LOGIN</string>
    <string name="register">register</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="inventory">Inventory</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_all">Show all</string>
    <string name="sample_text">Sample Text</string>
    <string name="add_new_spider"><![CDATA[Add New Spider?]]></string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="more_details">More Details</string>
    <string name="add">Add</string>
    <string name="are_you_leaving">Are you leaving?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>

    <!-- Help Center Headers -->
    <string name="help_center">Help Center</string>
    <string name="faqs">FAQs</string>
    <string name="feedback">Feedback</string>

    <!-- FAQ Questions -->
    <string name="faq_add_spider">How do I add a new spider to the inventory?</string>
    <string name="faq_edit_spider">Can I edit the information of a spider after adding it to the inventory?</string>
    <string name="faq_search_spider">How can I search for a specific spider in the catalog?</string>
    <string name="faq_delete_spider">What should I do if I accidentally delete a spider from the inventory?</string>

    <!-- FAQ Answers -->
    <string name="faq_add_spider_answer">To add a new spider, navigate to the \'Add Spider\' section from the main menu. Fill in the spider\'s details, such as species, color, origin, and characteristics, then tap \'Save\' to add it to the inventory.</string>
    <string name="faq_edit_spider_answer">Yes, you can edit spider details. Go to the \'Spider Catalog,\' select the spider you want to update, and tap the \'Edit\' button. Make the necessary changes and save them.</string>
    <string name="faq_search_spider_answer">Use the search bar at the top of the \'Spider Catalog\' page to search by species name, color, origin, or other characteristics. You can also use filters to narrow down the results.</string>
    <string name="faq_delete_spider_answer">Once a spider is deleted, it cannot be recovered. Make sure to confirm your decision when deleting any entry. We recommend double-checking before removing any entry.</string>

    <!-- Feedback Section -->
    <string name="feedback_hint">Write feedback…</string>
    <string name="send_feedback">Send Feedback</string>
</resources>