<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spider_sec_bg"
    tools:context=".view.Authentication.LoginPage">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:src="@drawable/spider_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/lp_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_txt"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:inputType="text"
        android:singleLine="true"
        android:layout_below="@id/app_name"
        android:textSize="14sp"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/lp_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/lp_et_email"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/lp_et_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_txt"
        android:textColor="@color/maroon"
        android:layout_below="@id/lp_et_password"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@id/lp_et_password"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/lp_et_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RedButtonStyle"
        android:background="@drawable/spider_button_bg"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/lp_et_forgotPassword"
        android:textSize="12sp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/lp_et_toRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_yet_sign_in"
        android:textColor="@color/maroon"
        android:layout_below="@id/lp_et_loginBtn"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/>

</RelativeLayout>