<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spider_sec_bg"
    tools:context=".view.Authentication.RegisterPage">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:src="@drawable/spider_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/rp_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_txt"
        android:inputType="text"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/app_name"
        android:textSize="14sp"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/rp_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:layout_below="@id/rp_et_email"
        android:textSize="14sp"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/rp_et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"
        android:layout_below="@id/rp_et_password"
        android:textSize="14sp"
        android:background="@drawable/spider_white_container_box"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/rp_et_regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RedButtonStyle"
        android:background="@drawable/spider_button_bg"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/rp_et_confirm_password"
        android:textSize="12sp"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/rp_et_toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_and_account_sign_in"
        android:textColor="@color/maroon"
        android:layout_below="@id/rp_et_regBtn"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/>


</RelativeLayout>