<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="410dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/maroon">

        <ImageButton
            android:id="@+id/i_close_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_close_btn_white" />

        <TextView
            android:id="@+id/dialog_spider_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:singleLine="true"
            android:layout_below="@+id/i_close_btn"
            android:text="@string/add_new_spider"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/dialog_spider_name"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/dialog_spider_txt"
            android:hint="@string/name"
            android:singleLine="true"
            android:paddingStart="15dp"
            android:background="@drawable/spider_white_container_box"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/dialog_spider_size"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/size"
            android:paddingStart="15dp"
            android:singleLine="true"
            android:layout_below="@id/dialog_spider_name"
            android:background="@drawable/spider_white_container_box"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/dialog_spider_desc"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:hint="@string/more_details"
            android:paddingStart="15dp"
            android:gravity="top"
            android:paddingTop="15dp"
            android:layout_below="@id/dialog_spider_size"
            android:background="@drawable/spider_white_container_box"
            android:layout_height="100dp"/>

        <Button
            android:id="@+id/dialog_add_spiderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WhiteButtonStyle"
            android:text="@string/add"
            android:layout_below="@id/dialog_spider_desc"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/maroon"
            />

    </RelativeLayout>

</RelativeLayout>