<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:background="@color/maroon">

        <ImageButton
            android:id="@+id/i_close_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_close_btn_white" />

        <TextView
            android:id="@+id/dialog_spider_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:singleLine="true"
            android:layout_below="@+id/i_close_btn"
            android:text="@string/are_you_leaving"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:singleLine="true"
            android:layout_below="@+id/dialog_spider_txt"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/dialog_logoutAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/WhiteButtonStyle"
            android:text="@string/logout"
            android:layout_below="@id/txt1"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/maroon"
            android:layout_marginBottom="30dp"
            />


    </RelativeLayout>

</RelativeLayout>