<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spider_sec_bg"
    tools:context=".Authentication.ForgotPasswordPage">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:src="@drawable/spider_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/spider_white_container_box"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/fp_close_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/spider_close_btn" />

        <TextView
            android:id="@+id/fp_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_below="@id/fp_close_btn"
            android:textColor="@color/maroon"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fp_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_below="@+id/fp_txt1"
            android:hint="@string/email_txt"
            android:singleLine="true"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            android:padding="15dp"
            android:textSize="14sp"
            android:background="@drawable/spider_button_bg"/>

        <Button
            android:id="@+id/fp_submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_below="@+id/fp_et_email"
            android:text="@string/submit"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            style="@style/RedButtonStyle"
            android:background="@drawable/spider_button_bg"/>


    </RelativeLayout>

</RelativeLayout>